--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         '2': {0:'z',1:'x',2:'c',3:'v',4:'b',5:'n',6:'m',length:7},
         'length': 3
     }
-    var hsah = {
+    var hash = {
         'q': 'qq.com', 'w': 'weibo.com', 'e': 'ele.com', 'r': 'renren.com', 't': 'tienya.com',
         'y': 'youtube.com', 'u': 'uc.com', 'i': 'iqiyi.com', 'o': 'opera.com', 'p': undefined,
         'a': 'acfun.tv', 's': 'sohu.com', 'z': 'zhihu.com', 'm': 'www.mcdonalds.com.cn'
     }
 
+    //遍历 keys，生成 kbd 标签
     index = 0;
     while(index < keys['length']){
         divXX = document.createElement('div');
@@ -35,6 +36,13 @@
             index2++;
         }
         index++;
+    }
+
+    document.onkeypress = function (xx) {
+        key = xx['key'];
+        website = hash[key]
+        //location.href = "http://" + website
+        window.open("http://"+website, '_blank')
     }
 </script>
 </body>
