--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
     <main id="mainXX"></main>
     <footer></footer>
 <script>
-    var keys = {
+    keys = {
         '0': {0:'q',1:'w',2:'e',3:'r',4:'t',5:'y',6:'u',7:'i',8:'o',9:'p',length:10},
         '1': {0:'a',1:'s',2:'d',3:'f',4:'g',5:'h',6:'j',7:'k',8:'l',length:9},
         '2': {0:'z',1:'x',2:'c',3:'v',4:'b',5:'n',6:'m',length:7},
         'length': 3
     }
-    var hash = {
+    hash = {
         'q': 'qq.com', 'w': 'weibo.com', 'e': 'ele.com', 'r': 'renren.com', 't': 'tienya.com',
         'y': 'youtube.com', 'u': 'uc.com', 'i': 'iqiyi.com', 'o': 'opera.com', 'p': undefined,
         'a': 'acfun.tv', 's': 'sohu.com', 'z': 'zhihu.com', 'm': 'www.mcdonalds.com.cn'
+    }
+
+    //取出 localStorage 中的 zzz 对应的 hash
+     hashInLocalStorage = JSON.parse(localStorage.getItem('zzz') || 'null');
+    if(hashInLocalStorage){
+        hash = hashInLocalStorage;
     }
 
     //遍历 keys，生成 kbd 标签
@@ -37,7 +43,8 @@
             buttonXX.id = row[index2];
             buttonXX.onclick = function(xx){
                 key = xx['target']['id'];
-                hash[key] = prompt('给我一个网址');
+                hash[key] = prompt('给我一个网址');   //变更hash
+                localStorage.setItem('zzz',JSON.stringify(hash));
             }
             kbdXX.appendChild(buttonXX);
             divXX.appendChild(kbdXX);
