--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header></header>
-    <main id="mainXX"></main>
+    <main>
+        <div class="wrapper" id="main"></div>
+    </main>
     <footer></footer>
 <script>
     keys = {
@@ -17,13 +19,13 @@
         'length': 3
     }
     hash = {
-        'q': 'qq.com', 'w': 'weibo.com', 'e': 'ele.com', 'r': 'renren.com', 't': 'tienya.com',
+        'q': 'www.qq.com', 'w': 'weibo.com', 'e': 'ele.com', 'r': 'renren.com', 't': 'tienya.com',
         'y': 'youtube.com', 'u': 'uc.com', 'i': 'iqiyi.com', 'o': 'opera.com', 'p': undefined,
         'a': 'acfun.tv', 's': 'sohu.com', 'z': 'zhihu.com', 'm': 'www.mcdonalds.com.cn'
     }
 
     //取出 localStorage 中的 zzz 对应的 hash
-     hashInLocalStorage = JSON.parse(localStorage.getItem('zzz') || 'null');
+    hashInLocalStorage = JSON.parse(localStorage.getItem('zzz') || 'null');
     if(hashInLocalStorage){
         hash = hashInLocalStorage;
     }
@@ -31,23 +33,28 @@
     //遍历 keys，生成 kbd 标签
     index = 0;
     while(index < keys['length']){
-        divXX = document.createElement('div');
-        mainXX.appendChild(divXX);
+        div = document.createElement('div');
+        div.className = 'row';
+        main.appendChild(div);
         index2 = 0;
         row = keys[index];
         while(index2 < row.length){
-            kbdXX = document.createElement('kbd');
-            kbdXX.textContent = row[index2];
-            buttonXX = document.createElement('button');
-            buttonXX.textContent = '编辑';
-            buttonXX.id = row[index2];
-            buttonXX.onclick = function(xx){
+            kbd = document.createElement('kbd');
+            kbd.textContent = row[index2];
+            kbd.className = 'key'
+            button = document.createElement('button');
+            button.textContent = '编辑';
+            button.id = row[index2];
+            img = document.createElement('img');
+            img.src = 'http://' + hash[row[index2]] + '/favicon.ico';
+            button.onclick = function(xx){
                 key = xx['target']['id'];
-                hash[key] = prompt('给我一个网址');   //变更hash
+                hash[key] = prompt('给重新给我一个网址');   //变更hash
                 localStorage.setItem('zzz',JSON.stringify(hash));
             }
-            kbdXX.appendChild(buttonXX);
-            divXX.appendChild(kbdXX);
+            kbd.appendChild(img);
+            kbd.appendChild(button);
+            div.appendChild(kbd);
             index2++;
         }
         index++;
